fix page width on mobile

--- a/src/DataPrivacy.css
+++ b/src/DataPrivacy.css
@@ -1,6 +1,6 @@
 .icon-wrapper {
   position: absolute;
-  left: 25px;
+  left: 20px;
   top: 30px;
 }
 
@@ -13,4 +13,5 @@
   padding: 0 20px;
   margin: 0 auto;
   text-align: left;
+  word-break: break-word;
 }
