--- a/src/Footer.css
+++ b/src/Footer.css
@@ -7,6 +7,7 @@
   flex-direction: row;
   display: flex;
   padding: 20px 25px;
+  color: white;
 }
 
 .footer-link {
