--- a/src/Header.css
+++ b/src/Header.css
@@ -9,11 +9,13 @@
 
 .header-logo {
   height: 200px;
+  width: 100%;
 }
 
 @media (min-width: 750px) {
   .header-logo {
     height: 500px;
+    width: unset;
   }
 }
 
