--- a/src/Imprint.css
+++ b/src/Imprint.css
@@ -1,13 +1,3 @@
-.icon-wrapper {
-  position: absolute;
-  left: 25px;
-  top: 30px;
-}
-
-.back-icon {
-  width: 30px;
-}
-
 .email-link {
   text-decoration: none;
   color: #0b193f;
